<resources>
    <string name="app_name">MyApp1</string>
    <string name="btn1">BOTON 1</string>
    <string name="btn2">BOTON 2</string>
    <string name="titulo1">Nombre de la Aplicación</string>

    <string name="login">INICIAR SESIÓN</string>
    <string name="edit_email">INGRESAR CORREO</string>
    <string name="edit_pass">INGRESAR CONTRASEÑA</string>
    <string name="btn_login">INGRESAR</string>
    <string name="btn_email">CONTINUAR CON GOOGLE</string>
    <string name="btn_cuenta">CREAR CUENTA</string>
    <string name="r_pass">RECUPERAR CONTRASEÑA</string>
    <string name="crear">Crear Cuenta</string>
    <string name="nom">Nombres</string>
    <string name="ape">Apellidos</string>
    <string name="cel">Numero de Celular</string>
    <string name="email">Correo</string>
    <string name="contra">Contraseña</string>
    <string name="cuenta">Crear</string>
    <string name="recuperar">Recuperar Contraseña</string>
    <string name="rec">Recuperar</string>
    <string name="btn_log">Login</string>
</resources>