<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crear">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear"
        android:textColor="@color/Sena"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="66dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="122dp"
        android:layout_height="113dp"
        app:srcCompat="@drawable/logo_sena"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="30dp" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/nom"
        android:inputType="text"
        android:textAlignment="textStart"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="172dp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/ape"
        android:inputType="text"
        android:textAlignment="textStart"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="253dp" />

    <EditText
        android:id="@+id/editTextText1"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/cel"
        android:inputType="text"
        android:textAlignment="textStart"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="343dp" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:textAlignment="textStart"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="437dp" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/contra"
        android:inputType="text"
        android:textAlignment="textStart"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="527dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/Sena"
        android:text="@string/cuenta"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="609dp" />
</androidx.constraintlayout.widget.ConstraintLayout>