<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recuperar">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:text="@string/recuperar"
        android:textAlignment="center"
        android:textColor="@color/Sena"
        android:textSize="24sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        app:srcCompat="@drawable/logo_sena"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="125dp" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/edit_email"
        android:inputType="text"
        android:textAlignment="textStart"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="374dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/Sena"
        android:text="@string/rec"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="530dp" />


</androidx.constraintlayout.widget.ConstraintLayout>